2nd reader for NGA data

--- a/CubismApps/Tests/sid_small_1ch/reader/Makefile
+++ b/CubismApps/Tests/sid_small_1ch/reader/Makefile
@@ -1,8 +1,11 @@
-all: ngareader
+all: ngareader ngareader2
 
 
 ngareader: ngareader.cpp
 	g++ -o $@ $^
 
+ngareader2: ngareader2.cpp
+	g++ -o $@ $^
+
 clean:
-	rm -f ngareader
+	rm -f ngareader ngareader2
