--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -279,10 +279,10 @@ ifneq "$(findstring bulldozer,$(shell hostname))" ""
 endif
 
 ifneq "$(findstring panda,$(shell hostname))" ""
-	hdf-inc = /opt/hdf5_openmpi/include
-	hdf-lib = /opt/hdf5_openmpi/lib
-#	hdf-inc = /opt/hdf5_mpich/include
-#	hdf-lib = /opt/hdf5_mpich/lib
+#	hdf-inc = /opt/hdf5_openmpi/include
+#	hdf-lib = /opt/hdf5_openmpi/lib
+	hdf-inc = /opt/hdf5_mpich/include
+	hdf-lib = /opt/hdf5_mpich/lib
 endif
 
 ifneq "$(findstring falcon,$(shell hostname))" ""
