Various updates from previous work

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -29,8 +29,10 @@ fftw ?= 0
 
 #compression stage-1 (floating point)
 wavz ?= 1
+
 fpc ?= 0
 fpzip ?= 0
+fpzip_eps ?= 32
 shuffle ?= 0
 zerobits ?= 0
 drain ?= 0
@@ -71,6 +73,9 @@ endif
 endif
 endif
 endif
+
+
+
 
 
 CPPFLAGS+= $(extra) #-Wall
@@ -202,8 +207,8 @@ ifneq "$(findstring brutus,$(shell hostname))" ""
 	vtk-inc = /cluster/work/infk/cconti/VTK5.8_gcc/include/vtk-5.8/
 	vtk-lib = /cluster/work/infk/cconti/VTK5.8_gcc/lib/vtk-5.8/
 	#ifneq "$(findstring mpi,$(CC))" ""
-	hdf-inc = $HDF5_ROOT/include/
-	hdf-lib = $HDF5_ROOT/lib/
+	hdf-inc = $(HDF5_ROOT)/include/
+	hdf-lib = $(HDF5_ROOT)/lib/
 	#else
 	#	hdf-inc = /cluster/work/infk/hbabak/apps/hdf5-1.8.8_gcc_serial/include/
 	#	hdf-lib = /cluster/work/infk/hbabak/apps/hdf5-1.8.8_gcc_serial/lib/
@@ -337,6 +342,11 @@ endif
 ifeq "$(fpzip)" "1"
 	CPPFLAGS += -D_USE_FPZIP_  -I../../../tools/fpzip/inc -I../fpzip/inc
 	LIBS += -L../../../tools/fpzip/lib -L../fpzip/lib -lfpzip 
+	ifeq "$(fpzip_eps)" "24"
+		CPPFLAGS += -D_FPZIP_24_
+	else ifeq "$(fpzip_eps)" "16"
+		CPPFLAGS += -D_FPZIP_16_
+	endif
 endif
 
 ifeq "$(drain)" "1"
