ch2ch + ch2diff

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -28,7 +28,7 @@ fftw ?= 0
 #
 
 #compression stage-1 (floating point)
-wavz ?= 1
+wavz ?= 0
 
 fpc ?= 0
 fpzip ?= 0
@@ -38,7 +38,7 @@ zerobits ?= 0
 drain ?= 0
 
 #compression stage-2 (encoding)
-zlib ?= 1
+zlib ?= 0
 lz4 ?= 0
 lzf ?= 0
 lzma ?= 0
@@ -55,7 +55,7 @@ ifeq "$(wavz)" "0"
 ifeq "$(fpc)" "0"
 ifeq "$(fpzip)" "0"
 ifeq "$(drain)" "0"
-wavz = 1
+#wavz = 1
 endif
 endif
 endif
@@ -67,7 +67,7 @@ ifeq "$(lz4)" "0"
 ifeq "$(lzf)" "0" 
 ifeq "$(fpc2)" "0"
 ifeq "$(fpzip2)" "0"
-zlib = 1
+#zlib = 1
 endif
 endif
 endif
@@ -340,9 +340,11 @@ ifeq "$(fpc)" "1"
 endif
 
 ifeq "$(fpzip)" "1"
-	CPPFLAGS += -D_USE_FPZIP_  -I../../../tools/fpzip/inc -I../fpzip/inc
-	LIBS += -L../../../tools/fpzip/lib -L../fpzip/lib -lfpzip 
-	ifeq "$(fpzip_eps)" "24"
+	CPPFLAGS += -D_USE_FPZIP_  -I../../../tools/fpzip/inc -I../fpzip/inc -I../../tools/fpzip/inc
+	LIBS += -L../../../tools/fpzip/lib -L../fpzip/lib -L../../tools/fpzip/lib -lfpzip 
+	ifeq "$(fpzip_eps)" "32"
+		CPPFLAGS += -D_FPZIP_32_
+	else ifeq "$(fpzip_eps)" "24"
 		CPPFLAGS += -D_FPZIP_24_
 	else ifeq "$(fpzip_eps)" "16"
 		CPPFLAGS += -D_FPZIP_16_
