--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -386,23 +386,23 @@ ifeq "$(zlib)" "1"
 endif
 
 ifeq "$(lz4)" "1"
-       CPPFLAGS += -D_USE_LZ4_  -I../../../tools/lz4
-       LIBS += -L../../../tools/lz4 -llz4
+       CPPFLAGS += -D_USE_LZ4_  -I../../tools/lz4
+       LIBS += -L../../tools/lz4 -llz4
 endif
 
 ifeq "$(lzf)" "1"
-       CPPFLAGS += -D_USE_LZF_  -I../../../tools/lzf
-       LIBS += -L../../../tools/lzf -llzf 
+       CPPFLAGS += -D_USE_LZF_  -I../../tools/lzf
+       LIBS += -L../../tools/lzf -llzf 
 endif
 
 ifeq "$(lzma)" "1"
-       CPPFLAGS += -D_USE_LZMA_  -I../../../tools/xz-5.0.5/src/liblzma/api
-       LIBS += -L../../../tools/xz-5.0.5/src/liblzma/.libs -llzma 
+       CPPFLAGS += -D_USE_LZMA_  -I../../tools/xz-5.0.5/src/liblzma/api
+       LIBS += -L../../tools/xz-5.0.5/src/liblzma/.libs -llzma 
 endif
 
 ifeq "$(zopfli)" "1"
-       CPPFLAGS += -D_USE_ZOPFLI_  -I../../../tools/zopfli
-       LIBS += -L../../../tools/zopfli -lzopfli 
+       CPPFLAGS += -D_USE_ZOPFLI_  -I../../tools/zopfli
+       LIBS += -L../../tools/zopfli -lzopfli 
 endif
 
 ifeq "$(fpc2)" "1"
