Added ISABELA but without gain

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -38,7 +38,7 @@ zerobits ?= 0
 drain ?= 0
 zfp ?= 0
 sz ?= 0
-isabella ?= 0
+isa ?= 0
 
 #compression stage-2 (encoding)
 zlib ?= 0
@@ -60,7 +60,7 @@ ifeq "$(fpzip)" "0"
 ifeq "$(drain)" "0"
 ifeq "$(zfp)" "0"
 ifeq "$(sz)" "0"
-ifeq "$(isabella)" "0"
+ifeq "$(isa)" "0"
 #wavz = 1
 endif
 endif
@@ -380,6 +380,11 @@ ifeq "$(sz)" "1"
 	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ-0.5.14/include $(SZFLAG) $(JAVAFLAG)
 #	LIBS += -L../../tools/SZ-0.5.14/lib -lsz $(JAVALIBS)
 	LIBS += $(SZPATH)/SZ/lib/libsz.a $(JAVALIBS)
+endif
+
+ifeq "$(isa)" "1"
+	CPPFLAGS += -D_USE_ISA_  -I../../tools/ISABELA-compress-0.2.1/include
+	LIBS += -L../../tools/ISABELA-compress-0.2.1/lib -lisabela -lgsl
 endif
 
 ifeq "$(shuffle)" "1"
