--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -48,6 +48,7 @@ lzma ?= 0
 zopfli ?=0
 zstd ?= 0
 zstd0 ?=0 
+blosc ?= 0
 
 #fpc2 ?= 0	# this works but I do not know what we compress (mix below)
 #fpzip2 ?= 0	# this does not seem to work when the stream is a mix of integers and floats
@@ -466,6 +467,11 @@ ifeq "$(zstd0)" "1"
        CPPFLAGS += -D_USE_ZSTD0_ -I../../tools/zstd-dev/lib
        LIBS +=  -lz -L../../tools/zstd-dev/zlibWrapper -lzstd
 #-L../../tools/zstd-dev/lib
+endif
+
+ifeq "$(blosc)" "1"
+       CPPFLAGS += -D_USE_BLOSC_ -I../../tools/c-blosc/include
+       LIBS +=  -L../../tools/c-blosc/lib -lblosc -lz
 endif
 
 
