spdp (fpc) + fp compression of wavelet coefficients

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -54,8 +54,8 @@ blosc ?= 0
 #fpzip2 ?= 0	# this does not seem to work when the stream is a mix of integers and floats
 #
 
-#fpc3 ?= 0	# for wavz + fpc
-#fpzip3 ?= 0	# for wavz + fpz
+spdp3 ?= 0	# for wavz + spdp
+fpzip3 ?= 0	# for wavz + fpz
 shuffle3 ?= 0	# for wavz + shuffle3
 
 ifeq "$(wavz)" "0" 
@@ -466,7 +466,6 @@ endif
 ifeq "$(zstd0)" "1"
        CPPFLAGS += -D_USE_ZSTD0_ -I../../tools/zstd-dev/lib
        LIBS +=  -lz -L../../tools/zstd-dev/zlibWrapper -lzstd
-#-L../../tools/zstd-dev/lib
 endif
 
 ifeq "$(blosc)" "1"
@@ -488,15 +487,26 @@ endif
 
 # Extensions to the Wavelet-based Compression (wavz)
 
-#ifeq "$(fpc3)" "1"
-#	CPPFLAGS += -D_USE_FPC3_  -I../../../tools/fpc
-#	LIBS += -L../../../tools/fpc -lfpc 
-#endif
+ifeq "$(spdp3)" "1"
+	CPPFLAGS += -D_USE_SPDP3_  -I../../tools/spdp
+	LIBS += -L../../tools/spdp -lspdp 
+#	LIBS += ../../tools/spdp/libspdp.a
+endif
 
-#ifeq "$(fpzip3)" "1"
-#	CPPFLAGS += -D_USE_FPZIP3_  -I../../../tools/fpzip/inc
-#	LIBS += -L../../../tools/fpzip/lib -lfpzip 
-#endif
+ifeq "$(fpzip3)" "1"
+	CPPFLAGS += -D_USE_FPZIP3_  -I../../tools/fpzip-1.1.0/inc
+	LIBS += -L../../tools/fpzip-1.1.0/lib -lfpzip 
+	ifeq "$(fpzip_eps)" "32"
+		CPPFLAGS += -D_FPZIP_32_
+	else ifeq "$(fpzip_eps)" "24"
+		CPPFLAGS += -D_FPZIP_24_
+	else ifeq "$(fpzip_eps)" "16"
+		CPPFLAGS += -D_FPZIP_16_
+	endif
+
+	CPPFLAGS += -D_USE_FPZIP3_  -I../../../tools/fpzip/inc
+	LIBS += -L../../../tools/fpzip/lib -lfpzip 
+endif
 
 ifeq "$(shuffle3)" "1"
        CPPFLAGS += -D_USE_SHUFFLE3_ 
