Compressing the wavelet coefficients

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -56,6 +56,8 @@ blosc ?= 0
 
 spdp3 ?= 0	# for wavz + spdp
 fpzip3 ?= 0	# for wavz + fpz
+zfp3 ?= 0	# for wavz + zfp
+sz3 ?= 0	# for wavz + sz
 shuffle3 ?= 0	# for wavz + shuffle3
 
 ifeq "$(wavz)" "0" 
@@ -506,6 +508,16 @@ ifeq "$(fpzip3)" "1"
 
 	CPPFLAGS += -D_USE_FPZIP3_  -I../../../tools/fpzip/inc
 	LIBS += -L../../../tools/fpzip/lib -lfpzip 
+endif
+
+ifeq "$(zfp3)" "1"
+	CPPFLAGS += -D_USE_ZFP3_  -I../../tools/zfp-0.5.0/inc
+	LIBS += -L../../tools/zfp-0.5.0/lib -lzfp
+endif
+
+ifeq "$(sz3)" "1"
+	CPPFLAGS += -D_USE_SZ3_  -I../../tools/sz-1.4.8-beta/sz/include/
+	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 endif
 
 ifeq "$(shuffle3)" "1"
