--- a/CubismApps/tools/spdp/Makefile
+++ b/CubismApps/tools/spdp/Makefile
@@ -5,15 +5,17 @@ spdp: SPDP_10.c
 
 
 libspdp.a: spdp_10.c
-	gcc -O3 -c spdp_10.c
+#	gcc -O3 -c spdp_10.c
+	gcc -O0 -g -ggdb -c spdp_10.c
 	ar rs libspdp.a spdp_10.o
 	ranlib libspdp.a
 
 #mytest_spdp: mytest.c
 #	gcc -fopenmp -O3 -o mytest_spdp mytest.c spdp_10.c -lm
 
-mytest_spdp: mytest.cpp
-	gcc -fopenmp -O3 -o mytest_spdp mytest.cpp -L. -lspdp -lm
+mytest_spdp: mytest.cpp myspdp.h
+	gcc -fopenmp -g -ggdb -O0 -o mytest_spdp mytest.cpp -L. -lspdp -lm
+#	gcc -fopenmp -O3 -o mytest_spdp mytest.cpp -L. -lspdp -lm
 
 clean:
 	rm -f spdp mytest_spdp *.o *.a
