Latest (github) version of SZ

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -401,9 +401,11 @@ ifeq "$(sz0)" "1"
 endif
 
 ifeq "$(sz)" "1"
-	CPPFLAGS += -D_USE_SZ_  -I../../tools/sz-1.4.8-beta/sz/include/
-#	LIBS += -L../../tools/sz-1.4.8-beta/sz -lsz 
-	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+#	CPPFLAGS += -D_USE_SZ_  -I../../tools/sz-1.4.8-beta/sz/include/
+#	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+
+	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/sz/include/
+	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 endif
 
 ifeq "$(isa)" "1"
@@ -516,8 +518,11 @@ ifeq "$(zfp3)" "1"
 endif
 
 ifeq "$(sz3)" "1"
-	CPPFLAGS += -D_USE_SZ3_  -I../../tools/sz-1.4.8-beta/sz/include/
-	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+#	CPPFLAGS += -D_USE_SZ3_  -I../../tools/sz-1.4.8-beta/sz/include/
+#	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+
+	CPPFLAGS += -D_USE_SZ3_  -I../../tools/SZ/sz/include/
+	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 endif
 
 ifeq "$(shuffle3)" "1"
