Resolved weird issue with SPDP_10.c
There was a weird issue with upper-case/lower-case variants of
spdp_10.c, whereas the Makefile used the lower-case variant only.
Whenever the repository was cloned, git status showed that SPDP_10.c was
modified without having touched the file (and it did not even exist,
only the lower-case spdp_10.c variant exists).  I have merged the file
content of SPDP_10.c into spdp_10.c (as it is used in the Makefile) and
deleted SPDP_10.c.

--- a/CubismApps/tools/spdp/Makefile
+++ b/CubismApps/tools/spdp/Makefile
@@ -1,21 +1,24 @@
-all: spdp libspdp.a mytest_spdp
+CC = gcc
 
-spdp: SPDP_10.c
-	gcc -O3 SPDP_10.c -o spdp
+# all: spdp libspdp.a mytest_spdp
+all: libspdp.a mytest_spdp
+
+spdp: spdp_10.c
+	$(CC) $(extra) -O3 spdp_10.c -o spdp
 
 
 libspdp.a: spdp_10.c
-#	gcc -O3 -c spdp_10.c
-	gcc -O0 -g -ggdb -c spdp_10.c
+#	$(CC) $(extra) -O3 -c spdp_10.c
+	$(CC) $(extra) -O0 -g -ggdb -c spdp_10.c
 	ar rs libspdp.a spdp_10.o
 	ranlib libspdp.a
 
 #mytest_spdp: mytest.c
-#	gcc -fopenmp -O3 -o mytest_spdp mytest.c spdp_10.c -lm
+#	$(CC) -fopenmp -O3 -o mytest_spdp mytest.c spdp_10.c -lm
 
 mytest_spdp: mytest.cpp myspdp.h
-	gcc -fopenmp -g -ggdb -O0 -o mytest_spdp mytest.cpp -L. -lspdp -lm
-#	gcc -fopenmp -O3 -o mytest_spdp mytest.cpp -L. -lspdp -lm
+	$(CC) $(extra) -fopenmp -g -ggdb -O0 -o mytest_spdp mytest.cpp -L. -lspdp -lm
+#	$(CC) $(extra) -fopenmp -O3 -o mytest_spdp mytest.cpp -L. -lspdp -lm
 
 clean:
 	rm -f spdp mytest_spdp *.o *.a
