Byte shuffling of the private buffer before applying the lossless compression

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -50,6 +50,10 @@ zstd ?= 0
 zstd0 ?=0 
 blosc ?= 0
 
+# shuffling before encoding 
+zshuffle ?= 0
+
+
 #fpc2 ?= 0	# this works but I do not know what we compress (mix below)
 #fpzip2 ?= 0	# this does not seem to work when the stream is a mix of integers and floats
 #
@@ -488,6 +492,10 @@ ifeq "$(fpzip2)" "1"
        LIBS += -L../../../tools/fpzip/lib -lfpzip 
 endif
 
+
+ifeq "$(zshuffle)" "1"
+       CPPFLAGS += -D_USE_ZSHUFFLE_ 
+endif
 
 # Extensions to the Wavelet-based Compression (wavz)
 
