wblosc for 1st stage, CUBISMZ_NOIO, decompression + load_block3

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -39,6 +39,7 @@ drain ?= 0
 zfp ?= 0
 sz ?= 0
 isa ?= 0
+wblosc ?= 0
 
 #compression stage-2 (encoding)
 zlib ?= 0
@@ -62,6 +63,7 @@ spdp3 ?= 0	# for wavz + spdp
 fpzip3 ?= 0	# for wavz + fpz
 zfp3 ?= 0	# for wavz + zfp
 sz3 ?= 0	# for wavz + sz
+fpc3 ?= 0	# for wavz + fpc
 shuffle3 ?= 0	# for wavz + shuffle3
 
 ifeq "$(wavz)" "0" 
@@ -354,8 +356,8 @@ ifeq "$(wavz)" "1"
 endif
 
 ifeq "$(fpc)" "1"
-       CPPFLAGS += -D_USE_FPC_  -I../../../tools/fpc
-       LIBS += -L../../../tools/fpc -lfpc 
+       CPPFLAGS += -D_USE_FPC_  -I../../tools/fpc
+       LIBS += -L../../tools/fpc -lfpc 
 endif
 
 ifeq "$(fpzipX)" "1"
@@ -438,6 +440,11 @@ ifeq "$(zerobits)" "16"
        CPPFLAGS += -D_ZEROBITS_=16 
 endif
 
+ifeq "$(wblosc)" "1"
+       CPPFLAGS += -D_USE_WBLOSC_ -I../../tools/c-blosc/include
+       LIBS +=  -L../../tools/c-blosc/lib -lblosc -lz
+endif
+
 
 # Encoding Options
 
@@ -483,8 +490,8 @@ endif
 
 
 ifeq "$(fpc2)" "1"
-       CPPFLAGS += -D_USE_FPC2_  -I../../../tools/fpc
-       LIBS += -L../../../tools/fpc -lfpc 
+       CPPFLAGS += -D_USE_FPC2_  -I../../tools/fpc
+       LIBS += -L../../tools/fpc -lfpc 
 endif
 
 ifeq "$(fpzip2)" "1"
@@ -523,6 +530,11 @@ endif
 ifeq "$(zfp3)" "1"
 	CPPFLAGS += -D_USE_ZFP3_  -I../../tools/zfp-0.5.0/inc
 	LIBS += -L../../tools/zfp-0.5.0/lib -lzfp
+endif
+
+ifeq "$(fpc3)" "1"
+	CPPFLAGS += -D_USE_FPC3_  -I../../tools/fpc
+	LIBS += -L../../tools/fpc -lfpc 
 endif
 
 ifeq "$(sz3)" "1"
