--- a/CubismApps/Tests/hdf2ch/sz.config
+++ b/CubismApps/Tests/hdf2ch/sz.config
@@ -29,7 +29,8 @@ quantization_intervals = 0
 #As for low-precision compression (i.e., high error bound such as 1E-2), max_quant_intervals could be set to 256 or 65536.
 #As for pretty-high-precision demand (i.e., fairly small error bound such as 1E-6), max_quant_intervals could be set to 2097152(=2^21).
 #max_quant_intervals = 131072
-max_quant_intervals = 65536
+#max_quant_intervals = 65536
+max_quant_intervals=256
 
 #predThreshold: the threshold to determine the ratio of predictable data over all data
 #predThreshold = 0.97 means 97% of data will be predictable
