updated sz.config file

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -411,7 +411,8 @@ ifeq "$(sz)" "1"
 #	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 
 	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/sz/include/
-	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+#	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/SZ/zlib/.libs/libzlib.a
 endif
 
 ifeq "$(isa)" "1"
