Code fixes for SZ

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -329,7 +329,7 @@ endif
 
 CPPFLAGS +=  -I$(hdf-inc)
 
-LIBS += -lstdc++ -lm -lz
+LIBS += -lstdc++ -lm # -lz
 ifeq "$(findstring Darwin,$(shell uname))" ""
 	LIBS += -lrt
 endif
@@ -394,24 +394,15 @@ ifeq "$(zfp)" "1"
 	LIBS += -L../../tools/zfp-0.5.0/lib -lzfp
 endif
 
-ifeq "$(sz0)" "1"
-	SZPATH = /home/chatzidp/gitlab/CubismZ/CubismApps/tools/SZ-0.5.14
-	JAVAHOME= /usr/lib/jvm/java-1.8.0
-	SZFLAG  = -I$(SZPATH)/include # $(SZPATH)/SZ/lib/libsz.a
-	JAVAFLAG = -fPIC -I$(JAVAHOME)/include -I$(JAVAHOME)/include/linux
-	JAVALIBS = -L$(JAVAHOME)/jre/lib/amd64/server -ljvm
-
-	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ-0.5.14/include $(SZFLAG) $(JAVAFLAG)
-#	LIBS += -L../../tools/SZ-0.5.14/lib -lsz $(JAVALIBS)
-	LIBS += $(SZPATH)/SZ/lib/libsz.a $(JAVALIBS)
-endif
-
 ifeq "$(sz)" "1"
 #	CPPFLAGS += -D_USE_SZ_  -I../../tools/sz-1.4.8-beta/sz/include/
 #	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 
-	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/build/include/
-	LIBS += ../../tools/SZ/build/lib/libsz.a ../../tools/SZ/build/lib/libzlib.a
+#	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/build/include/
+#	LIBS += ../../tools/SZ/build/lib/libsz.a ../../tools/SZ/build/lib/libzlib.a
+
+	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/sz/include/
+	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/SZ/zlib/.libs/libzlib.a
 endif
 
 ifeq "$(isa)" "1"
