more on SZ (sz148)

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -27,6 +27,10 @@ cvt ?= 0
 fftw ?= 0
 #
 
+
+
+needs_lz ?= 1
+
 #compression stage-1 (floating point)
 wavz ?= 0
 
@@ -80,6 +84,11 @@ endif
 endif
 endif
 endif
+endif
+
+
+ifeq "$(sz)" "1"
+needs_lz = 0
 endif
 
 
@@ -329,7 +338,12 @@ endif
 
 CPPFLAGS +=  -I$(hdf-inc)
 
-LIBS += -lstdc++ -lm # -lz
+LIBS += -lstdc++ -lm 
+
+ifeq "$(needs_lz)" "1"
+LIBS += -lz
+endif
+
 ifeq "$(findstring Darwin,$(shell uname))" ""
 	LIBS += -lrt
 endif
@@ -394,15 +408,21 @@ ifeq "$(zfp)" "1"
 	LIBS += -L../../tools/zfp-0.5.0/lib -lzfp
 endif
 
-ifeq "$(sz)" "1"
-#	CPPFLAGS += -D_USE_SZ_  -I../../tools/sz-1.4.8-beta/sz/include/
-#	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 
+sz148 ?= 0
+
+ifeq "$(sz)" "1"
+
+ifeq "$(sz148)" "1"
+	CPPFLAGS += -D_USE_SZ148_ -D_USE_SZ_  -I../../tools/sz-1.4.8-beta/sz/include/
+	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
+else
 #	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/build/include/
 #	LIBS += ../../tools/SZ/build/lib/libsz.a ../../tools/SZ/build/lib/libzlib.a
 
 	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/sz/include/
 	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/SZ/zlib/.libs/libzlib.a
+endif
 endif
 
 ifeq "$(isa)" "1"
