minor sz related adjustments

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -338,7 +338,7 @@ endif
 
 CPPFLAGS +=  -I$(hdf-inc)
 
-LIBS += -lstdc++ -lm 
+LIBS += -lstdc++ -lm
 
 ifeq "$(needs_lz)" "1"
 LIBS += -lz
@@ -417,11 +417,11 @@ ifeq "$(sz148)" "1"
 	CPPFLAGS += -D_USE_SZ148_ -D_USE_SZ_  -I../../tools/sz-1.4.8-beta/sz/include/
 	LIBS += ../../tools/sz-1.4.8-beta/sz/.libs/libsz.a ../../tools/sz-1.4.8-beta/zlib/.libs/libzlib.a
 else
-#	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/build/include/
-#	LIBS += ../../tools/SZ/build/lib/libsz.a ../../tools/SZ/build/lib/libzlib.a
+	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/build/include/
+	LIBS += -L../../tools/SZ/build/lib -lsz -lzlib
 
-	CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/sz/include/
-	LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/SZ/zlib/.libs/libzlib.a
+	# CPPFLAGS += -D_USE_SZ_  -I../../tools/SZ/sz/include/
+	# LIBS += ../../tools/SZ/sz/.libs/libsz.a ../../tools/SZ/zlib/.libs/libzlib.a
 endif
 endif
 
