--- a/CubismApps/Tests/hdf2ch/sz148.config
+++ b/CubismApps/Tests/hdf2ch/sz148.config
@@ -42,7 +42,7 @@ offset = 0
 
 #SZ_Mode
 #two options: SZ_BEST_SPEED, SZ_DEFAULT_COMPRESSION, SZ_BEST_COMPRESSION
-szMode = SZ_BEST_COMPRESSION
+szMode = SZ_DEFAULT_COMPRESSION
 
 #GZIP_Mode
 #Note: this parameter setting is valid only if szMode = SZ_BEST_COMPRESION.
