--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -19,15 +19,11 @@ sequoia ?= 0
 
 # +node
 hdf ?= 0
-vtk ?= 0
 numa ?= 0
 cvt ?= 0
 
 # +cluster
 fftw ?= 0
-#
-
-
 
 needs_lz ?= 1
 
@@ -70,6 +66,8 @@ sz3 ?= 0	# for wavz + sz
 fpc3 ?= 0	# for wavz + fpc
 shuffle3 ?= 0	# for wavz + shuffle3
 
+###############################################################################
+
 ifeq "$(wavz)" "0"
 ifeq "$(fpc)" "0"
 ifeq "$(fpzip)" "0"
@@ -104,9 +102,7 @@ endif
 endif
 endif
 
-
-
-
+###############################################################################
 
 CPPFLAGS+= $(extra) #-Wall
 
@@ -196,123 +192,15 @@ ifeq "$(omp)" "1"
 	endif
 endif
 
-######
+###############################################################################
 
-vtk-inc ?=/usr/local/include/vtk-5.2/
-vtk-lib ?=/usr/local/lib/vtk-5.2/
-numa-inc ?=/cluster/work/infk/diegor/numactl-2.0.8-rc4
-numa-lib ?=/cluster/work/infk/diegor/numactl-2.0.8-rc4
+numa-inc ?=.
+numa-lib ?=.
 hdf-inc ?=.
 hdf-lib ?=.
 
-ifneq "$(findstring rosa,$(shell hostname))" ""
-	ifeq "$(CC)" "cc"
-		LIBS += -dynamic
-	endif
-endif
-
-ifneq "$(findstring todi,$(shell hostname))" ""
-	ifeq "$(CC)" "cc"
-		LIBS += -dynamic
-	endif
-endif
-
-ifeq "$(shell hostname)" "reynolds.inf.ethz.ch"
-	vtk-inc =/usr/local/include/vtk-5.6/
-	vtk-lib =/usr/local/lib/vtk-5.6/
-endif
-
-ifeq "$(shell hostname)" "silvio"
-	vtk-inc = /usr/include/vtk-5.6/
-	vtk-lib = /usr/lib/vtk-5.6/
-	hdf-inc = /home/hbabak/hdf5-1.8.8_gcc_serial/include/
-	hdf-lib = /home/hbabak/hdf5-1.8.8_gcc_serial/lib/
-#        hdf-inc = /home/hbabak/hdf5-1.8.8_gcc/include/
-#        hdf-lib = /home/hbabak/hdf5-1.8.8_gcc/lib/
-	numa-inc = /home/hbabak/numactl-2.0.7/include/
-	numa-lib = /home/hbabak/numactl-2.0.7/
-endif
-
-ifneq "$(findstring brutus,$(shell hostname))" ""
-	vtk-inc = /cluster/work/infk/cconti/VTK5.8_gcc/include/vtk-5.8/
-	vtk-lib = /cluster/work/infk/cconti/VTK5.8_gcc/lib/vtk-5.8/
-	#ifneq "$(findstring mpi,$(CC))" ""
-	hdf-inc = $(HDF5_ROOT)/include/
-	hdf-lib = $(HDF5_ROOT)/lib/
-	#else
-	#	hdf-inc = /cluster/work/infk/hbabak/apps/hdf5-1.8.8_gcc_serial/include/
-	#	hdf-lib = /cluster/work/infk/hbabak/apps/hdf5-1.8.8_gcc_serial/lib/
-	#endif
-	numa-inc = /cluster/work/infk/hbabak/numactl-2.0.7/include/
-	numa-lib = /cluster/work/infk/hbabak/numactl-2.0.7/
-endif
-
-ifneq "$(findstring rosa,$(shell hostname))" ""
-        vtk-inc = /users/petrosk/VTK/include/vtk-5.8/
-        vtk-lib = /users/petrosk/VTK/lib/vtk-5.8/
-	#ifeq "$(CC)" "icc"
-	#	hdf-inc = /users/petrosk/hdf5-1.8.8_icc_serial/include/
-	#	hdf-lib = /users/petrosk/hdf5-1.8.8_icc_serial/lib/
-	#else
-	#	hdf-inc = /users/petrosk/hdf5-1.8.8_gcc_serial/include/
-	#	hdf-lib = /users/petrosk/hdf5-1.8.8_gcc_serial/lib/
-	#endif
-
-	ifeq "$(CC)" "icc"
-	     hdf-inc = /opt/cray/hdf5-parallel/1.8.8/intel/120/include/#/users/petrosk/hdf5-1.8.8/include/
-     	     hdf-lib = /opt/cray/hdf5-parallel/1.8.8/intel/120/lib/#/users/petrosk/hdf5-1.8.8/lib/
-	else
-         #    hdf-inc = /users/petrosk/hdf5-1.8.8_gcc/include/
-         #    hdf-lib = /users/petrosk/hdf5-1.8.8_gcc/lib/
-	endif
-
-	numa-inc = /users/petrosk/numactl-2.0.7/
-	numa-lib = /users/petrosk/numactl-2.0.7/lib64/
-endif
-
-
-ifneq "$(findstring daint,$(shell hostname))" ""
-        vtk-inc = /users/petrosk/VTK/include/vtk-5.8/
-        vtk-lib = /users/petrosk/VTK/lib/vtk-5.8/
-        #ifeq "$(CC)" "icc"
-        #       hdf-inc = /users/petrosk/hdf5-1.8.8_icc_serial/include/
-        #       hdf-lib = /users/petrosk/hdf5-1.8.8_icc_serial/lib/
-        #else
-        #       hdf-inc = /users/petrosk/hdf5-1.8.8_gcc_serial/include/
-        #       hdf-lib = /users/petrosk/hdf5-1.8.8_gcc_serial/lib/
-        #endif
-
-        ifeq "$(CC)" "icc"
-             hdf-inc = /opt/cray/hdf5-parallel/1.8.8/intel/120/include/#/users/petrosk/hdf5-1.8.8/include/
-             hdf-lib = /opt/cray/hdf5-parallel/1.8.8/intel/120/lib/#/users/petrosk/hdf5-1.8.8/lib/
-        else
-            # hdf-inc = /users/petrosk/hdf5-1.8.8_gcc/include/
-            # hdf-lib = /users/petrosk/hdf5-1.8.8_gcc/lib/
-        endif
-
-        numa-inc = /users/petrosk/numactl-2.0.7/
-        numa-lib = /users/petrosk/numactl-2.0.7/lib64/
-endif
-
-ifneq "$(findstring todi,$(shell hostname))" ""
-        vtk-inc = /users/petrosk/VTK/include/vtk-5.8/
-        vtk-lib = /users/petrosk/VTK/lib/vtk-5.8/
-	ifeq "$(CC)" "icc"
-		hdf-inc = /users/petrosk/hdf5-1.8.8_icc_serial/include/
-		hdf-lib = /users/petrosk/hdf5-1.8.8_icc_serial/lib/
-	else
-		hdf-inc = /users/petrosk/hdf5-1.8.8_gcc_serial/include/
-		hdf-lib = /users/petrosk/hdf5-1.8.8_gcc_serial/lib/
-	endif
-	numa-inc = /users/petrosk/numactl-2.0.7/
-	numa-lib = /users/petrosk/numactl-2.0.7/lib64/
-endif
-
-ifneq "$(findstring bulldozer,$(shell hostname))" ""
-       hdf-inc = /home/chatzidp/usr/hdf5/include/
-       hdf-lib = /home/chatzidp/usr/hdf5/lib/
-endif
-
+###############################################################################
+# Testing machines
 ifneq "$(findstring panda,$(shell hostname))" ""
 #	hdf-inc = /opt/hdf5_openmpi/include
 #	hdf-lib = /opt/hdf5_openmpi/lib
@@ -326,6 +214,7 @@ ifneq "$(findstring falcon,$(shell hostname))" ""
 	hdf-inc = /opt/hdf5_mpich/include
 	hdf-lib = /opt/hdf5_mpich/lib
 endif
+###############################################################################
 
 CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs) -DWENOEPS=$(weps)
 CPPFLAGS += -I../../../Cubism/source/ -I../source -I../../Compressor/source/ -I/usr/local/include/
@@ -362,7 +251,12 @@ ifeq "$(bgq)" "1"
        LIBS += -L..../zlib/lib
 endif
 
+ifeq "$(numa)" "1"
+	CPPFLAGS += -D_USE_NUMA_ -I$(numa-inc)
+	LIBS += -L$(numa-lib) -lnuma
+endif
 
+###############################################################################
 # Compression Options
 
 ifeq "$(wavz)" "1"
@@ -457,6 +351,7 @@ ifeq "$(wblosc)" "1"
 endif
 
 
+###############################################################################
 # Encoding Options
 
 ifeq "$(zlib)" "1"
@@ -558,45 +453,4 @@ endif
 
 ifeq "$(shuffle3)" "1"
        CPPFLAGS += -D_USE_SHUFFLE3_
-endif
-
-
-
-ifeq "$(vtk)" "1"
-	CPPFLAGS += -I$(vtk-inc) -D_USE_VTK_
-
-	LIBS += -L$(vtk-lib) \
-		-lvtkVolumeRendering \
-		-lvtkRendering \
-		-lvtkIO \
-		-lvtkGenericFiltering \
-		-lvtkGraphics \
-		-lvtkImaging \
-		-lvtkFiltering \
-		-lvtkCommon \
-		-lvtkftgl \
-		-lvtkDICOMParser \
-		-lvtksys \
-		-lvtkexoIIc \
-		-lvtkNetCDF \
-		-lvtkNetCDF_cxx \
-		-lvtkmetaio \
-		-lvtksqlite \
-		-lvtkverdict \
-		-lvtkexpat \
-		-lvtktiff \
-		-lvtkpng \
-		-lvtkjpeg \
-		-lvtkzlib \
-		-lvtkHybrid \
-		-lvtkfreetype
-
-	ifneq "$(findstring brutus,$(shell hostname))" ""
-		LIBS+= -lvtkParallel -lVPIC -lCosmo
-	endif
-endif
-
-ifeq "$(numa)" "1"
-	CPPFLAGS += -D_USE_NUMA_ -I$(numa-inc)
-	LIBS += -L$(numa-lib) -lnuma
 endif
