--- a/CubismApps/tools/ch2ch/Makefile
+++ b/CubismApps/tools/ch2ch/Makefile
@@ -7,10 +7,10 @@ config ?=release
 
 include ../../Makefile.config
 
-CPPFLAGS += -I../../Cubism/source -I../Cubism/source -I../../../Cubism/source/ -I../../MPCFcluster/source/ -I../../MPCFnode/source -I../../MPCcore/source -I.  -I../reader
+CPPFLAGS += -I../../../Cubism/source/ -I../../Compressor/source -I.  -I../reader
 
 ##################
-VPATH := ../../../Cubism/source/ ../../MPCFcluster/source/ ../../MPCFnode/source/ .
+VPATH := ../../../Cubism/source/ ../../Compressor/source/ .
 #.DEFAULT_GOAL := ch2ch ch2ch_io
 
 OBJECTS = main.o WaveletCompressor.o
@@ -18,13 +18,13 @@ OBJECTS_IO = main_io.o WaveletCompressor.o
 
 all: ch2ch ch2ch_io
 
-ch2ch: $(OBJECTS) 
+ch2ch: $(OBJECTS)
 	$(CC) $(OPTFLAGS) $(extra) $^ -o $@ $(LIBS)
 
-ch2ch_io: $(OBJECTS_IO) 
+ch2ch_io: $(OBJECTS_IO)
 	$(CC) $(OPTFLAGS) $(extra) $^ -o $@ $(LIBS)
 
-%.o: %.cpp 
+%.o: %.cpp
 	$(CC)  $(OPTFLAGS) $(CPPFLAGS) -c $^ -o $@
 
 clean:
