minor ThirdParty adjustments

--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -257,18 +257,21 @@ endif
 ###############################################################################
 # Compression Options
 
+# ThirdParty libraries
+LIBS += -L../../ThirdParty/build/lib
+
 ifeq "$(wavz)" "1"
        CPPFLAGS += -D_USE_WAVZ_
 endif
 
 ifeq "$(fpc)" "1"
-       CPPFLAGS += -D_USE_FPC_  -I../../ThirdParty/fpc
-       LIBS += -L../../ThirdParty/fpc -lfpc
+       CPPFLAGS += -D_USE_FPC_  -I../../ThirdParty/build/include/fpc
+       LIBS += -lfpc
 endif
 
 ifeq "$(fpzipX)" "1"
-	CPPFLAGS += -D_USE_FPZIP_  -I../../../ThirdParty/fpzip/inc -I../fpzip/inc -I../../ThirdParty/fpzip/inc
-	LIBS += -L../../../ThirdParty/fpzip/lib -L../fpzip/lib -L../../ThirdParty/fpzip/lib -lfpzip
+	CPPFLAGS += -D_USE_FPZIP_  -I../../ThirdParty/build/include/fpzip
+	LIBS += -lfpzip
 	ifeq "$(fpzip_eps)" "32"
 		CPPFLAGS += -D_FPZIP_32_
 	else ifeq "$(fpzip_eps)" "24"
@@ -279,8 +282,8 @@ ifeq "$(fpzipX)" "1"
 endif
 
 ifeq "$(fpzip)" "1"
-	CPPFLAGS += -D_USE_FPZIP_  -I../../ThirdParty/fpzip-1.1.0/inc
-	LIBS += -L../../ThirdParty/fpzip-1.1.0/lib -lfpzip
+	CPPFLAGS += -D_USE_FPZIP_  -I../../ThirdParty/build/include/fpzip
+	LIBS += -lfpzip
 	ifeq "$(fpzip_eps)" "32"
 		CPPFLAGS += -D_FPZIP_32_
 	else ifeq "$(fpzip_eps)" "24"
@@ -290,14 +293,9 @@ ifeq "$(fpzip)" "1"
 	endif
 endif
 
-ifeq "$(drain)" "1"
-	CPPFLAGS += -D_USE_DRAIN_  -I${HOME}/usr/DRain/include
-	LIBS += -L${HOME}/usr/DRain/lib -lDRain
-endif
-
 ifeq "$(zfp)" "1"
-	CPPFLAGS += -D_USE_ZFP_  -I../../ThirdParty/zfp-0.5.0/inc
-	LIBS += -L../../ThirdParty/zfp-0.5.0/lib -lzfp
+	CPPFLAGS += -D_USE_ZFP_  -I../../ThirdParty/build/include/zfp
+	LIBS += -lzfp
 endif
 
 
@@ -309,8 +307,8 @@ ifeq "$(sz148)" "1"
 	CPPFLAGS += -D_USE_SZ148_ -D_USE_SZ_  -I../../ThirdParty/sz-1.4.8-beta/sz/include/
 	LIBS += ../../ThirdParty/sz-1.4.8-beta/sz/.libs/libsz.a ../../ThirdParty/sz-1.4.8-beta/zlib/.libs/libzlib.a
 else
-	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/SZ/build/include/
-	LIBS += -L../../ThirdParty/SZ/build/lib -lsz -lzlib
+	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
+	LIBS += -lsz -lzlib
 
 	# CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/SZ/sz/include/
 	# LIBS += ../../ThirdParty/SZ/sz/.libs/libsz.a ../../ThirdParty/SZ/zlib/.libs/libzlib.a
@@ -318,8 +316,8 @@ endif
 endif
 
 ifeq "$(isa)" "1"
-	CPPFLAGS += -D_USE_ISA_  -I../../ThirdParty/ISABELA-compress-0.2.1/include
-	LIBS += -L../../ThirdParty/ISABELA-compress-0.2.1/lib -lisabela -lgsl
+	CPPFLAGS += -D_USE_ISA_  -I../../ThirdParty/build/include/ISABELA
+	LIBS += -lisabela -lgsl
 endif
 
 ifeq "$(shuffle)" "1"
@@ -352,44 +350,34 @@ ifeq "$(zlib)" "1"
 endif
 
 ifeq "$(lz4)" "1"
-       CPPFLAGS += -D_USE_LZ4_  -I../../ThirdParty/lz4
-       LIBS += -L../../ThirdParty/lz4 -llz4
+       CPPFLAGS += -D_USE_LZ4_  -I../../ThirdParty/build/include/lz4
+       LIBS += -llz4
 endif
 
 ifeq "$(lzf)" "1"
-       CPPFLAGS += -D_USE_LZF_  -I../../ThirdParty/lzf
-       LIBS += -L../../ThirdParty/lzf -llzf
+       CPPFLAGS += -D_USE_LZF_  -I../../ThirdParty/build/include/lzf
+       LIBS += -llzf
 endif
 
-ifeq "$(lzma)" "1"
-       CPPFLAGS += -D_USE_LZMA_  -I../../ThirdParty/xz-5.0.5/src/liblzma/api
-       LIBS += -L../../ThirdParty/xz-5.0.5/src/liblzma/.libs -llzma
-endif
-
+# TODO: [fabianw@mavt.ethz.ch; Wed Nov 29 2017 04:59:35 PM (+0100)] ?
 ifeq "$(zstd)" "1"
        CPPFLAGS += -D_USE_ZSTD_ -I../../ThirdParty/zstd-dev/zlibWrapper -I../../ThirdParty/zstd-dev/lib -DZWRAP_USE_ZSTD=1
        LIBS +=  -lz -L../../ThirdParty/zstd-dev/zlibWrapper -L../../ThirdParty/zstd-dev/lib -lzstd2 -lzstd #-lz
 endif
 
 ifeq "$(zstd0)" "1"
-       CPPFLAGS += -D_USE_ZSTD0_ -I../../ThirdParty/zstd-dev/lib
-       LIBS +=  -lz -L../../ThirdParty/zstd-dev/zlibWrapper -lzstd
+       CPPFLAGS += -D_USE_ZSTD0_ -I../../ThirdParty/build/include/zstd
+       LIBS +=  -lz -lzstd
 endif
-
-ifeq "$(blosc)" "1"
-       CPPFLAGS += -D_USE_BLOSC_ -I../../ThirdParty/c-blosc/include
-       LIBS +=  -L../../ThirdParty/c-blosc/lib -lblosc -lz
-endif
-
 
 ifeq "$(fpc2)" "1"
-       CPPFLAGS += -D_USE_FPC2_  -I../../ThirdParty/fpc
-       LIBS += -L../../ThirdParty/fpc -lfpc
+       CPPFLAGS += -D_USE_FPC2_  -I../../ThirdParty/build/include/fpc
+       LIBS += -lfpc
 endif
 
 ifeq "$(fpzip2)" "1"
-       CPPFLAGS += -D_USE_FPZIP2_  -I../../../ThirdParty/fpzip/inc
-       LIBS += -L../../../ThirdParty/fpzip/lib -lfpzip
+       CPPFLAGS += -D_USE_FPZIP2_  -I../../ThirdParty/build/include/fpzip
+       LIBS += -lfpzip
 endif
 
 
@@ -400,14 +388,13 @@ endif
 # Extensions to the Wavelet-based Compression (wavz)
 
 ifeq "$(spdp3)" "1"
-	CPPFLAGS += -D_USE_SPDP3_  -I../../ThirdParty/spdp
-	LIBS += -L../../ThirdParty/spdp -lspdp
-#	LIBS += ../../ThirdParty/spdp/libspdp.a
+	CPPFLAGS += -D_USE_SPDP3_  -I../../ThirdParty/build/include/spdp
+	LIBS += -lspdp
 endif
 
 ifeq "$(fpzip3)" "1"
-	CPPFLAGS += -D_USE_FPZIP3_  -I../../ThirdParty/fpzip-1.1.0/inc
-	LIBS += -L../../ThirdParty/fpzip-1.1.0/lib -lfpzip
+	CPPFLAGS += -D_USE_FPZIP3_  -I../../ThirdParty/build/include/fpzip
+	LIBS += -lfpzip
 	ifeq "$(fpzip_eps)" "32"
 		CPPFLAGS += -D_FPZIP_32_
 	else ifeq "$(fpzip_eps)" "24"
@@ -416,26 +403,26 @@ ifeq "$(fpzip3)" "1"
 		CPPFLAGS += -D_FPZIP_16_
 	endif
 
-	CPPFLAGS += -D_USE_FPZIP3_  -I../../../ThirdParty/fpzip/inc
-	LIBS += -L../../../ThirdParty/fpzip/lib -lfpzip
+	CPPFLAGS += -D_USE_FPZIP3_  -I../../../ThirdParty/build/include/fpzip
+	LIBS += -lfpzip
 endif
 
 ifeq "$(zfp3)" "1"
-	CPPFLAGS += -D_USE_ZFP3_  -I../../ThirdParty/zfp-0.5.0/inc
-	LIBS += -L../../ThirdParty/zfp-0.5.0/lib -lzfp
+	CPPFLAGS += -D_USE_ZFP3_  -I../../ThirdParty/build/include/zfp
+	LIBS += -lzfp
 endif
 
 ifeq "$(fpc3)" "1"
-	CPPFLAGS += -D_USE_FPC3_  -I../../ThirdParty/fpc
-	LIBS += -L../../ThirdParty/fpc -lfpc
+	CPPFLAGS += -D_USE_FPC3_  -I../../ThirdParty/build/include/fpc
+	LIBS += -lfpc
 endif
 
 ifeq "$(sz3)" "1"
 #	CPPFLAGS += -D_USE_SZ3_  -I../../ThirdParty/sz-1.4.8-beta/sz/include/
 #	LIBS += ../../ThirdParty/sz-1.4.8-beta/sz/.libs/libsz.a ../../ThirdParty/sz-1.4.8-beta/zlib/.libs/libzlib.a
 
-	CPPFLAGS += -D_USE_SZ3_  -I../../ThirdParty/SZ/sz/include/
-	LIBS += ../../ThirdParty/SZ/sz/.libs/libsz.a ../../ThirdParty/sz-1.4.8-beta/zlib/.libs/libzlib.a
+	CPPFLAGS += -D_USE_SZ3_  -I../../ThirdParty/build/include
+	LIBS += -lsz -lzlib
 endif
 
 ifeq "$(shuffle3)" "1"
