--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -146,14 +146,11 @@ endif
 sz148 ?= 0
 
 ifeq "$(sz)" "1"
+#	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
+#	LIBS += -lsz  -lzlib
 
-ifeq "$(sz148)" "1"
-	CPPFLAGS += -D_USE_SZ148_ -D_USE_SZ_  -I../../ThirdParty/sz-1.4.8-beta/sz/include/
-	LIBS += ../../ThirdParty/sz-1.4.8-beta/sz/.libs/libsz.a ../../ThirdParty/sz-1.4.8-beta/zlib/.libs/libzlib.a
-else
 	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
-	LIBS += -lsz -lzlib
-endif
+        LIBS += ../../ThirdParty/build/lib/libsz.a ../../ThirdParty/build/lib/libzlib.a
 endif
 
 ifeq "$(shuffle)" "1"
