--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -20,7 +20,6 @@ needs_lz ?= 1
 wavz ?= 0
 
 fpzip ?= 0
-fpzip_eps ?= 32
 shuffle ?= 0
 zerobits ?= 0
 zfp ?= 0
@@ -128,13 +127,6 @@ endif
 ifeq "$(fpzip)" "1"
 	CPPFLAGS += -D_USE_FPZIP_  -I../../ThirdParty/build/include/fpzip
 	LIBS += -lfpzip
-	ifeq "$(fpzip_eps)" "32"
-		CPPFLAGS += -D_FPZIP_32_
-	else ifeq "$(fpzip_eps)" "24"
-		CPPFLAGS += -D_FPZIP_24_
-	else ifeq "$(fpzip_eps)" "16"
-		CPPFLAGS += -D_FPZIP_16_
-	endif
 endif
 
 ifeq "$(zfp)" "1"
@@ -142,15 +134,12 @@ ifeq "$(zfp)" "1"
 	LIBS += -lzfp
 endif
 
-
-sz148 ?= 0
-
 ifeq "$(sz)" "1"
-#	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
-#	LIBS += -lsz  -lzlib
-
 	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
-        LIBS += ../../ThirdParty/build/lib/libsz.a ../../ThirdParty/build/lib/libzlib.a
+	LIBS += -lSZ  -lzlib
+
+#	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
+#       LIBS += ../../ThirdParty/build/lib/libSZ.a ../../ThirdParty/build/lib/libzlib.a
 endif
 
 ifeq "$(shuffle)" "1"
