--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -3,6 +3,8 @@ SHELL := /bin/bash
 CC ?= gcc
 LD ?= gcc
 
+extra = -I/home/fabs/local/hdf5/build-parallel/include -L/home/fabs/local/hdf5/build-parallel/lib
+
 # core
 bs ?= 32
 ap ?= float
@@ -20,14 +22,17 @@ needs_lz ?= 1
 wavz ?= 0
 
 fpzip ?= 0
-shuffle ?= 0
-zerobits ?= 0
 zfp ?= 0
 sz ?= 0
+zerobits ?= 0
 
 #compression stage-2 (encoding)
 zlib ?= 0
 lz4 ?= 0
+
+# shuffling before encoding
+
+shuffle3 ?= 0	# for wavz + shuffle3
 
 ###############################################################################
 
@@ -36,14 +41,11 @@ needs_lz = 0
 endif
 
 ###############################################################################
-
 CPPFLAGS+= $(extra)
 
 ifeq "$(ap)" "float"
         CPPFLAGS += -D_FLOAT_PRECISION_
 endif
-
-CPPFLAGS += -D_MICROFUSION_=$(microfusion)
 
 ifeq "$(config)" "release"
 	ifeq "$(CC)" "icc"
@@ -54,7 +56,7 @@ ifeq "$(config)" "release"
 			CPPFLAGS += -fast
 		endif
 	else
-		OPTFLAGS += -O3 -fno-expensive-optimizations -falign-functions=16 -DNDEBUG 
+		OPTFLAGS += -O3 -fno-expensive-optimizations -falign-functions=16 -DNDEBUG
 		OPTFLAGS += -DNDEBUG
 	endif
 else
@@ -97,7 +99,7 @@ ifneq "$(findstring falcon,$(shell hostname))" ""
 endif
 ###############################################################################
 
-CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs) 
+CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
 CPPFLAGS += -I../../../Cubism/source/ -I../source -I../../Compressor/source/ -I/usr/local/include/
 CPPFLAGS += -I../../../../Cubism/source
 
