--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -1,9 +1,17 @@
 SHELL := /bin/bash
 
-CC ?= gcc
-LD ?= gcc
+CC ?= mpic++
+LD ?= mpic++
 
-extra = -I/home/fabs/local/hdf5/build-parallel/include -L/home/fabs/local/hdf5/build-parallel/lib
+#extra = -I/home/fabs/local/hdf5/build-parallel/include -L/home/fabs/local/hdf5/build-parallel/lib
+###############################################################################
+hdf-inc = .
+hdf-lib = .
+
+hdf-inc = /opt/hdf5_mpich/include
+hdf-lib = /opt/hdf5_mpich/lib
+###############################################################################
+
 
 # core
 bs ?= 32
@@ -13,25 +21,21 @@ align ?= 16
 qpx ?= 0
 qpxemu ?= 0
 
-# +node
-hdf ?= 0
-
 needs_lz ?= 1
 
 #compression stage-1 (floating point)
 wavz ?= 0
-
 fpzip ?= 0
 zfp ?= 0
 sz ?= 0
-zerobits ?= 0
 
 #compression stage-2 (encoding)
 zlib ?= 0
 lz4 ?= 0
 
-# shuffling before encoding
+# bit zeroing and byte shuffling before encoding
 
+zerobits ?= 0
 shuffle3 ?= 0	# for wavz + shuffle3
 
 ###############################################################################
@@ -86,31 +90,18 @@ ifeq "$(omp)" "1"
 endif
 
 ###############################################################################
-
-hdf-inc ?=.
-hdf-lib ?=.
-
-###############################################################################
 # Testing machines
 
 ifneq "$(findstring falcon,$(shell hostname))" ""
-	hdf-inc = /opt/hdf5_mpich/include
-	hdf-lib = /opt/hdf5_mpich/lib
 endif
 ###############################################################################
 
 CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
-CPPFLAGS += -I../../../Cubism/source/ -I../source -I../../Compressor/source/ -I/usr/local/include/
-CPPFLAGS += -I../../../../Cubism/source
+CPPFLAGS += -I../../Cubism/source/ -I../Compressor/source/ 
 
-ifeq "$(hdf)" "1"
-	CPPFLAGS += -I$(hdf-inc) -D_USE_HDF_
-	LIBS += -L$(hdf-lib) -lhdf5
-endif
-
-CPPFLAGS +=  -I$(hdf-inc)
-
-LIBS += -lstdc++ -lm
+CPPFLAGS += -I$(hdf-inc) -D_USE_HDF_
+LIBS += -L$(hdf-lib) -lhdf5
+LIBS += -lm 
 
 ifeq "$(needs_lz)" "1"
 LIBS += -lz
@@ -120,28 +111,25 @@ endif
 # Compression Options
 
 # ThirdParty libraries
-LIBS += -L../../ThirdParty/build/lib
+LIBS += -L../ThirdParty/build/lib
 
 ifeq "$(wavz)" "1"
        CPPFLAGS += -D_USE_WAVZ_
 endif
 
 ifeq "$(fpzip)" "1"
-	CPPFLAGS += -D_USE_FPZIP_  -I../../ThirdParty/build/include/fpzip
+	CPPFLAGS += -D_USE_FPZIP_  -I../ThirdParty/build/include/fpzip
 	LIBS += -lfpzip
 endif
 
 ifeq "$(zfp)" "1"
-	CPPFLAGS += -D_USE_ZFP_  -I../../ThirdParty/build/include/zfp
+	CPPFLAGS += -D_USE_ZFP_  -I../ThirdParty/build/include/zfp
 	LIBS += -lzfp
 endif
 
 ifeq "$(sz)" "1"
-	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
+	CPPFLAGS += -D_USE_SZ_  -I../ThirdParty/build/include
 	LIBS += -lSZ  -lzlib
-
-#	CPPFLAGS += -D_USE_SZ_  -I../../ThirdParty/build/include
-#       LIBS += ../../ThirdParty/build/lib/libSZ.a ../../ThirdParty/build/lib/libzlib.a
 endif
 
 ifeq "$(shuffle)" "1"
@@ -174,7 +162,7 @@ ifeq "$(zlib)" "1"
 endif
 
 ifeq "$(lz4)" "1"
-       CPPFLAGS += -D_USE_LZ4_  -I../../ThirdParty/build/include/lz4
+       CPPFLAGS += -D_USE_LZ4_  -I../ThirdParty/build/include/lz4
        LIBS += -llz4
 endif
 
