added Makefiles everywhere, remove the build_all.sh stuff

--- a/CubismApps/Tools/Makefile
+++ b/CubismApps/Tools/Makefile
@@ -3,10 +3,10 @@ SHELL := /bin/bash
 CC = mpic++
 config ?=release
 dir ?= default
+hdf = 1
 
 include ../Makefile.config
 
-nchannels ?= 1
 CPPFLAGS += -DTOTAL_CHANNELS=$(nchannels)
 LIBS += -L../ThirdParty/build/lib
 LIBS += -ldl
@@ -39,7 +39,5 @@ install: all
 	mv hdf2ch ch2hdf ch2diff decompr bin/$(dir)
 
 clean:
+	rm -rf bin
 	rm -f *.o hdf2ch ch2hdf ch2diff decompr
-
-cleanall:
-	rm -f *.o hdf2ch ch2hdf ch2diff decompr out*
